fix(review): address PR #262 review feedback
Security:
- WebSecurityConfig now checks environment.matchesProfiles("local")
  before adding /dev/** to unprotected and CSRF-ignored URIs, matching
  the controller's own @Profile("local") guard

Code quality:
- DevLoginController: replace sendRedirect()+null return with
  ResponseEntity.status(FOUND).header("Location", ...) — cleaner,
  no IOException, no HttpServletResponse dependency
- DevLoginController: use UserRepository.findAllByEnabledTrue() instead
  of findAll().filter() to filter at the database level
- DevLoginController: use .toList() instead of Collectors.toList()
- WebSecurityConfig: rename disableCSRFURIsArray → baseDisableCSRFURIs
- DevLoginStartupWarning: fix {{email}} typo → {email} in log message

Tests:
- UserServiceTest: remove dead authCaptor variable
- DevLoginControllerTest: update for new loginAs() signature
- DevLoginControllerTest: update listUsers() to use findAllByEnabledTrue()
- DevLoginIntegrationTest: strengthen shouldListEnabledUsers() to assert
  email content, not just array type

Deferred (follow-up issue): DevLoginConfigProperties registered via
@Component; architectural consistency with WebAuthnConfigProperties
needs a broader discussion before changing.